chapter1/exercise.1.1.c~
#include <stdio.h>

/* Exercise 1-1. Run the ``hello, world'' program on your system. Experiment with leaving */
/* out parts of the program, to see what error messages you get.  */
int main() {
  printf;("hello world");

  return 0;

/****************************************************************************
gcc error
int main() {
  printf("hello world")

}

expected ‘;’ before ‘}’ token
    4 |   printf("hello world")
      |                        ^
      |                        ;
    5 | 
    6 | }

#### SOURCE ###
int main() 
  printf("hello world");
}
### ERROR #####
exercise.1.1.c: In function ‘main’:
exercise.1.1.c:4:3: error: expected declaration specifiers before ‘printf’
    4 |   printf("hello world");
      |   ^~~~~~
exercise.1.1.c:5:1: error: expected declaration specifiers before ‘}’ token
    5 | }
      | ^
exercise.1.1.c:21: error: expected ‘{’ at end of input
   21 | 
      | 
##### END SOURCE #####
      
****************************************************************************/}
